--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "jupyter>=1.1.1",
+    "jupyter-black>=0.4.0",
+    "nhl-api-py>=3.0.2",
+    "pandas>=2.3.1",
     "yfpy>=16.0.3",
 ]
