--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,5 +10,6 @@ dependencies = [
     "nhl-api-py>=3.0.2",
     "pandas>=2.3.1",
     "tables>=3.10.2",
+    "yahoofantasy>=1.4.8",
     "yfpy>=16.0.3",
 ]
