--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "jupyter>=1.1.1",
     "jupyter-black>=0.4.0",
     "nhl-api-py>=3.0.2",
+    "openpyxl>=3.1.5",
     "pandas>=2.3.1",
     "tables>=3.10.2",
     "yahoofantasy>=1.4.8",
