--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,18 +21,9 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/fantasyhelper"]
-
-[tool.uv.workspace]
-members = [
-    ".",
-]
-
-[tool.uv.sources]
-fantasyhelper = { workspace = true }
+packages = ["fantasyhelper"]
 
 [dependency-groups]
 dev = [
     "fantasyhelper",
 ]
-
